--- a/src/styles/style-reports.css
+++ b/src/styles/style-reports.css
@@ -51,8 +51,9 @@
     align-items: flex-end;
     justify-content: center;
 }
-#r-graph-settings, #r-header-settings {
+#r-graph-settings, #r-header-settings, #r-settings-double, #r-generate-settings {
     width: 25%;
+    transition-duration: var(--global-transition-duration);
 }
 #r-report-structure {
     width: 45%;
@@ -60,16 +61,31 @@
 #r-report-list {
     height: 70%;
 }
-#r-graph-cover, #r-header-cover {
+.r-settings-item {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+#r-settings-double {
     width: 25%;
-    top: 0;
-    background-color: var(--no-access-setting-color);
 }
-#r-graph-cover {
-    left: 47.5%;
-    height: 100%;
+.r-checkbox {
+    padding: 0.5em;
+    background-color: var(--color-background);
+    border-radius: var(--round-amt);
+    font-size: 1em;
+    border-bottom: 3px solid var(--color-accent);
+    height: 2em;
+    width: 2em;
+    box-sizing: border-box;
+    transition-duration: var(--global-transition-duration);
+    accent-color: var(--color-dark);
+    cursor: pointer;
 }
-#r-header-cover {
-    left: 72.5%;
-    height: 50%;
+
+#r-generate-settings {
+    gap: 2em;
+    align-items: stretch;
 }
