--- a/src/styles/report-main.css
+++ b/src/styles/report-main.css
@@ -7,6 +7,7 @@
     --graph-title-size: 1.25em;
     --text-size: 1em;
     --text-color: black;
+    --footer-text-size: 0.75em;
 
     /* These variables are modified by Javascript. To change these values change the constants in report-main.js. */
     --page-width: 1300px;
@@ -71,6 +72,9 @@ h2 {
     flex-wrap: wrap;
     flex-direction: row;
 }
+.footer-text {
+    font-size: var(--footer-text-size);
+}
 .header-div {
     width: 100%;
     page-break-inside: avoid;
@@ -89,4 +93,17 @@ h2 {
 .graph-container {
     box-sizing: border-box;
     page-break-inside: avoid;
+}
+
+table, th, td {
+    border: 1px solid black;
+}
+table {
+    border-collapse: collapse;
+}
+th, td {
+    padding: 0.5em;
+}
+th {
+    background-color: var(--background-color);
 }
