--- a/src/styles/style-codebook.css
+++ b/src/styles/style-codebook.css
@@ -58,15 +58,15 @@ p {
     height: 60%;
 }
 .c-input {
-    padding: 0.5em;
+    padding: 0.5rem;
     background-color: var(--color-background);
     border-radius: var(--round-amt);
     border: none;
     outline: none;
-    font-size: 1em;
+    font-size: 1rem;
     border-bottom: 3px solid var(--color-accent);
-    height: 3em;
-    width: 10em;
+    height: 3rem;
+    width: 10rem;
     text-align: center;
     box-sizing: border-box;
     transition-duration: var(--global-transition-duration);
