--- a/src/styles/style-graphs.css
+++ b/src/styles/style-graphs.css
@@ -95,3 +95,12 @@
     margin-top: 10%;
     width: 20%;
 }
+#g-popup-bg {
+    position: fixed;
+    width: calc(100vw - 7 * var(--page-margin) - var(--config-container-width));
+    height: calc(100vh - 4 * var(--page-margin) - var(--tab-bar-height));
+    padding: var(--page-margin);
+    left: var(--page-margin);
+    top: calc(var(--page-margin) + var(--tab-bar-height));
+    z-index: 9999999;
+}
